catkin_ws/logs/backend/build.make.621.log.stderr
In file included from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Frame.cpp:7:0:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h: In constructor ‘SLAM::Frame::Frame(boost::shared_ptr<cv::Mat>&, boost::shared_ptr<cv::Mat>&, boost::shared_ptr<cv::Mat>&, boost::shared_ptr<double>&)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h:240:26: warning: ‘SLAM::Frame::newNodeFlag’ will be initialized after [-Wreorder]
  boost::shared_ptr<bool> newNodeFlag;
                          ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h:238:26: warning:   ‘boost::shared_ptr<bool> SLAM::Frame::keyFrameFlag’ [-Wreorder]
  boost::shared_ptr<bool> keyFrameFlag;
                          ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Frame.cpp:18:1: warning:   when initialized here [-Wreorder]
 Frame::Frame(boost::shared_ptr<cv::Mat>& rgbImage, boost::shared_ptr<cv::Mat>& grayImage, boost::shared_ptr<cv::Mat>& depthImage, boost::shared_ptr<double>& timeStamp)
 ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp: In member function ‘void SLAM::Mapping::parallelMatching()’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:482:8: warning: variable ‘prevId’ set but not used [-Wunused-but-set-variable]
    int prevId = -1;
        ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp: In function ‘int main(int, char**)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:257:4: error: ‘fileStorage’ was not declared in this scope
    fileStorage << fileName << endl;
    ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:259:42: error: ‘frame.SLAM::Frame::getKeypoints’ does not have class type
    for (int i = 0; i < frame.getKeypoints.size();i++)
                                          ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:261:40: error: invalid types ‘<unresolved overloaded function type>[int]’ for array subscript
     fileStorage << frame.getKeypoints[i].pt <<endl;
                                        ^
make[2]: *** [CMakeFiles/backend.dir/src/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/backend.dir/all] Error 2
make: *** [all] Error 2
